# thermal_camera

./: LICENSE  Makefile  README.md
driver/driver/: espmissing.h  hw_timer.c  i2c_master.c  i2c_master.h  key.h  sdio_slv.h  spi.h  spi_interface.h  uart.h
fw/: .gitignore  CMakeLists.txt  Makefile  doxygen.conf  project.yml  sdkconfig
fw/include/: CMakeLists.txt  user_config.h
fw/libs/: CMakeLists.txt
fw/libs/amg88/: amg88.c  amg88.h  amg88_defs.h
fw/src/: CMakeLists.txt  amg88_hal.c  amg88_hal.h  main.c  uc_init.c  uc_init.h
fw/tests/: tests.mk
include/: fast_gpio.h  simple_i2c.h  status.h  user_config.h
libs/crc8/: README.md  crc8.c  crc8.h
libs/f2c/: f2c.c  f2c.h
libs/fsm/: fsm.c  fsm.h
libs/simple_http/: common.c  common.h  simple_http.h  simple_http_client.c  simple_http_server.c
src/: extra_time.c  extra_time.h  uc_init.c  uc_init.h
